# grammers

./: .upstream_commit  Makefile  README.md
.github/workflows/: main.yml
grammers-client/: Cargo.toml
grammers-client/examples/: downloader.rs  echo.rs  inline-pagination.rs  send_album.rs
grammers-client/src/client/: auth.rs  bots.rs  chats.rs  client.rs  dialogs.rs  files.rs  messages.rs  net.rs  updates.rs
grammers-client/src/message/: message.rs
grammers-client/src/parsers/: html.rs
grammers-client/src/peer/: channel.rs  group.rs  mod.rs  peer_map.rs  user.rs
grammers-client/src/update/: callback_query.rs  inline_query.rs  inline_send.rs  message.rs
grammers-crypto/: Cargo.toml
grammers-crypto/src/: aes.rs  obfuscated.rs
grammers-mtproto/: Cargo.toml
grammers-mtproto/src/mtp/: encrypted.rs
grammers-mtsender/: Cargo.toml
grammers-mtsender/src/: erased_session.rs  errors.rs  sender.rs  sender_pool.rs  session.rs
grammers-mtsender/src/net/: tcp.rs
grammers-session/: Cargo.toml  DEPS.md
grammers-session/src/: lib.rs  peer.rs  session.rs  session_data.rs
grammers-session/src/message_box/: adaptor.rs  defs.rs
grammers-session/src/storages/: memory.rs  sqlite.rs
grammers-tl-gen/: Cargo.toml
grammers-tl-parser/: Cargo.toml
grammers-tl-types/: Cargo.toml
grammers-tl-types/tl/: api.tl
