[package]
name = "grammers-crypto"
version = "0.9.0"
authors = ["Lonami Exo <totufals@hotmail.com>"]
license = "MIT OR Apache-2.0"
description = """
Several cryptographic utilities to work with Telegram's data.
"""
homepage = "https://codeberg.org/Lonami/grammers"
documentation = "https://docs.rs/grammers-crypto"
repository = "https://codeberg.org/Lonami/grammers"
keywords = ["telegram", "tl"]
categories = ["cryptography"]
edition = "2024"

[dependencies]
aes = "0.9.1"
getrandom = "0.4.2"
glass_pumpkin = "2.0.0-rc0"
hmac = "0.13.0"
num-bigint = "0.4.6"
pbkdf2 = "0.13.0"
sha1 = "0.11.0"
sha2 = "0.11.0"
num-traits = "0.2.19"
ctr = "0.10.1"

[dev-dependencies]
bencher = "0.1.5"
toml = "1.1.2"

[[bench]]
name = "cipher"
harness = false
