[package]
name = "grammers-session"
version = "0.9.0"
authors = ["Lonami Exo <totufals@hotmail.com>"]
license = "MIT OR Apache-2.0"
description = """
Different session storages for Telegram data.
"""
homepage = "https://codeberg.org/Lonami/grammers"
documentation = "https://docs.rs/grammers-session"
repository = "https://codeberg.org/Lonami/grammers"
keywords = ["telegram", "tl"]
categories = []
edition = "2024"

[dependencies]
grammers-tl-types = { path = "../grammers-tl-types", version = "0.9.0" }
log = "0.4.32"

turso = { version = "0.6.1", default-features = false, optional = true }
tokio = { version = "1.52.3", default-features = false, features = ["sync"] }

serde = { version = "1", features = ["derive"], optional = true }
serde_with = { version = "3", features = ["hex"], optional = true }

[dev-dependencies]
toml = "1.1.2"
tokio = { version = "1.52.3", default-features = false, features = ["sync", "rt"] }

[features]
default = ["sqlite-storage"]
sqlite-storage = ["dep:turso"]
serde = ["dep:serde", "dep:serde_with"]
